--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 \usepackage[english,russian]{babel}
 \usepackage[T2A]{fontenc}
 \usepackage{spbstuthesis}
- \usepackage{cmap}
+\usepackage{cmap}
 \usepackage{graphicx}
 \usepackage{multirow}
 \usepackage{amsmath}
@@ -44,20 +44,20 @@ Keywords: domain specific language, functional testing, automobile systems.
 %для бакалаврских, дипломных и магистерских работ
 \item Срок сдачи работы.
 \item Исходные данные к проекту (работе).
-	Разработать и реализовать язык описания сценариев тестирования автомобильных систем. 
-	\subitemЯзык должен позволять пользователям описывать инструкции для тестовых сценариев в свободной форме.
-	\subitemСинтаксис языка должен позволять описывать несколько тестовых сценариев в документе.
-	\subitemТестовые сценарии должны выполняться в той очередности, в которой описаны в документе.
-	\subitemНеобходимо предоставить пользователю возможность работы с коммуникационными сетями автомобильных систем.
-	\subitemРезультаты выполнения тестовых сценариев должны сохраняться в файл.
+Разработать и реализовать язык описания сценариев тестирования автомобильных систем. 
+\subitem Язык должен позволять пользователям описывать инструкции для тестовых сценариев в свободной форме.
+\subitem Синтаксис языка должен позволять описывать несколько тестовых сценариев в документе.
+\subitem Тестовые сценарии должны выполняться в той очередности, в которой описаны в документе.
+\subitem Необходимо предоставить пользователю возможность работы с коммуникационными сетями автомобильных систем.
+\subitem Результаты выполнения тестовых сценариев должны сохраняться в файл.
 \item Содержание расчетно-пояснительной записки (перечень подлежащих 
 разработке вопросов).
-	\subitem Обзор литературы.
-	\subitem Описание аппаратной платформы.
-	\subitem Обзор методов описания и реализации проблемно-ориентированных языков.
-	\subitem Описание разработки и реализации языка.
-	\subitem Тестирования и опробация
-	\subitem Заключение и выводы
+\subitem Обзор литературы.
+\subitem Описание аппаратной платформы.
+\subitem Обзор методов описания и реализации проблемно-ориентированных языков.
+\subitem Описание разработки и реализации языка.
+\subitem Тестирования и апробация.
+\subitem Заключение и выводы.
 \item Перечень графического материала с точным указанием обязательных 
 чертежей. Не предусмотрен.
 \item Консультанты по проекту (с указанием относящегося к ним разделов 
@@ -123,7 +123,7 @@ AST& Abstract syntax tree\\
 \chapter{Обзор литературы и постановка задачи }
 \label{cReview}
 %Рекомендуемый объем главы "--- 10--15 стр.
-%Название главы должно отражать ее содержание, например Проблема вечного
+%Название главы должно отражать ее содержание, например, Проблема вечного
 %двигателя''.
 
 %---------------------------ГЛАВА 1.1 ЦЕЛЬ И ЗАДАЧИ
@@ -135,7 +135,7 @@ AST& Abstract syntax tree\\
 \itemВыделить и сравнить аналоги существующих инструментов для тестирования, позволяющих проверить качество программного обеспечение автомобильной системы.
 \itemРазработать проблемно-ориентированный язык для написания тестовых сценариев.
 \itemРеализовать язык.
-\itemПротестировать реализацию языка, а так же проанализировать такие аспекты языка, как удобство использования языка и эффективность разработки и сопровождения тестовых сценариев, разрабатываемых на этом языке.
+\itemПротестировать реализацию языка, а также проанализировать такие аспекты языка, как удобство использования языка и эффективность разработки и сопровождения тестовых сценариев, разрабатываемых на этом языке.
 \end{itemize}
 
 
@@ -161,14 +161,14 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 \end{itemize}
 
 
-Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитектурой программного обеспечения при тестировании ПО может рассматриваться в качестве «черного ящика». Данное понятие предложил У.Р. Эшби в своей книге «Введение в кибернетику»\cite{Eshby1959}. Под черным ящиком подразумевается объект исследования, внутреннее устройство которого неизвестно. В кибернетических системах оно помогает изучать поведение систем, абстрагируясь от их внутреннего устройства. Такое тестирование называется поведенческим. В этом случае проверяется функциональное поведение объекта с точки зрения внешнего мира. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. Фактически, при поведенческом тестировании известно какой результат должен быть при определенном наборе данных, которые подаются на вход. Проанализировав требования и спецификации тестировщик может легко определить набор тестовых сценариев для проверки различной функциональности тестируемой системы. Принимая тестируемую систему в качестве черного ящика ее можно исследовать, манипулируя входными данными и данными, полученными на выходе. Чтобы лучше понять, как исследуется поведение «черного ящика», предположим что имеется некоторая система управления, внутреннее устройство которой неизвестно для пользователя. Эта система управления имеет входы $X(x_1, x_2, ..., x_n)$ и выходы $Y(y_1, y_2, ..., y_n)$. Способ исследования поведения данной системы заключается в том, что выходы системы зависят от входов системы и времени $t_k, k \in \mathbb{Z}$. При этом величины времени выбираются произвольно (рис. \ref{fblackbox}) .
+Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитектурой программного обеспечения при тестировании ПО может рассматриваться в качестве «черного ящика». Данное понятие предложил У.Р. Эшби в своей книге «Введение в кибернетику»\cite{Eshby1959}. Под черным ящиком подразумевается объект исследования, внутреннее устройство которого неизвестно. В кибернетических системах оно помогает изучать поведение систем, абстрагируясь от их внутреннего устройства. Такое тестирование называется поведенческим. В этом случае проверяется функциональное поведение объекта с точки зрения внешнего мира. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. Фактически, при поведенческом тестировании известно какой результат должен быть при определенном наборе данных, которые подаются на вход. Проанализировав требования и спецификации тестировщик может легко определить набор тестовых сценариев для проверки различной функциональности тестируемой системы. Принимая тестируемую систему в качестве черного ящика ее можно исследовать, манипулируя входными данными и данными, полученными на выходе. Чтобы лучше понять, как исследуется поведение «черного ящика», предположим, что имеется некоторая система управления, внутреннее устройство которой неизвестно для пользователя. Эта система управления имеет входы $X(x_1, x_2, ..., x_n)$ и выходы $Y(y_1, y_2, ..., y_n)$. Способ исследования поведения данной системы заключается в том, что выходы системы зависят от входов системы и времени $t_k, k \in \mathbb{Z}$. При этом величины времени выбираются произвольно (рис. \ref{fblackbox}) .
 
 \begin{Figure}{Исследование поведения черного ящика}{fblackbox}
 {\includegraphics[width=\linewidth]{res/blackBox}}
 \label{fig:image}
 \end{Figure}
 
-В марте 2006 года Д. Норт предложил методологию BDD (behaviour-driven development)  \cite{BDD}, основанную на гибкой методологии разработки. BDD является своего рода расширением техники разработки программного обеспечения через тестирование (test-driven development, TDD). Идея BDD подхода была в том, что в процессе написания требования для разрабатываемого ПО аналитики должны описать тестовые сценарии таким образом, чтобы их смог понять и разработчик, и тестировщик, и заказчик. При этом тестовые сценарии состоят из набора заранее обговоренных предложений.
+В марте 2006 года Д. Норт предложил методологию BDD (behaviour-driven development) \cite{BDD}, основанную на гибкой методологии разработки. BDD является своего рода расширением техники разработки программного обеспечения через тестирование (test-driven development, TDD). Идея BDD подхода была в том, что в процессе написания требования для разрабатываемого ПО аналитики должны описать тестовые сценарии таким образом, чтобы их смог понять и разработчик, и тестировщик, и заказчик. При этом тестовые сценарии состоят из набора заранее обговоренных предложений.
 В своей статье Д. Норт описал следующие BDD идеи:
 
 \begin{itemize}
@@ -343,7 +343,7 @@ Controller Area Network (сеть контроллеров) -- это стандарт промышленной сети, о
 \itemКадр ошибки (error frame) — передаётся узлом, обнаружившим в сети ошибку.
 \end{itemize}
 
-Общий вид кадра представлен на рисунке \ref{fCAN}. В начале каждого кадра идет синхронизирующая пауза, обозначающая его начало. Следом идет 11 битный идентификатор сообщения, после которого находится поле данных изменяемой длины, но не превышающей 8 байт. Следующие 15 бит содержат контрольную сумму кадра. Далее указываются 1 битные поля: разграничитель контрольной суммы, который должен быть притянутым к нулю, промежуток подтверждения(при отправке выставляется в 0, при приеме в 1) и разграничитель подтверждения (должен быть равным нулю). Завершающим полем является конец кадра, длина которого 7 бит.
+Общий вид кадра представлен на рисунке \ref{fCAN}. В начале каждого кадра идет синхронизирующая пауза, обозначающая его начало. Следом идет 11 битный идентификатор сообщения, после которого находится поле данных изменяемой длины, но не превышающей 8 байт. Следующие 15 бит содержат контрольную сумму кадра. Далее указываются 1 битные поля: разграничитель контрольной суммы, который должен быть притянутым к нулю, промежуток подтверждения (при отправке выставляется в 0, при приеме в 1) и разграничитель подтверждения (должен быть равным нулю). Завершающим полем является конец кадра, длина которого 7 бит.
 
 \begin{Figure}[h!]{Кадр протокола CAN}{fCAN}
 {\includegraphics[width=\linewidth]{res/CAN}}
@@ -382,7 +382,7 @@ Controller Area Network (сеть контроллеров) -- это стандарт промышленной сети, о
 Данный способ тестирования подразумевает валидацию требований, предоставленных аналитиками и инженерами, которые составляют требования. Например, если в требовании описано, что сеть должна переходить в активный режим при получении любого кадра, то в качестве входных данных формируется любой корректный в данной сети кадр.
 \end{itemize}
 
-Основываясь на общепринятых способах проверки качества программного обеспечения, а так же специфики области автомобильной промышленности алгоритм тестирования можно описать следующим образом:
+Основываясь на общепринятых способах проверки качества программного обеспечения, а также специфики области автомобильной промышленности алгоритм тестирования можно описать следующим образом:
 \begin{enumerate}
 \itemиз тестовой инструкции извлекаются данные, необходимые для отправки на ECU;
 \itemданные преобразуются в кадры управления VectorBox;
@@ -449,7 +449,7 @@ $S$ – начальный символ грамматики.
 
 %Компилируемый или интерпретируемый?
 \section{Разработка языка}
-Существует два главных способа реализации языков программирования: компиляцияй и интерпретация.
+Существует два главных способа реализации языков программирования: компиляцией и интерпретация.
 Компилятор выясняет все, что должна выполнить программа, превращает инструкции в машинный код и сохраняет его, чтобы выполнить позже.
 Интерпретатор проходит всю программу строчку за строчкой и тут же выполняет.
 
@@ -523,7 +523,7 @@ $S$ – начальный символ грамматики.
 
 Для реализации языка было выбрано «еще одно средство распознавания языков» ANTLR4 (ANother Tool for Language Recognition). Это генератор нисходящих анализаторов для формальных языков. Он преобразует контекстно-свободную грамматику в форме РБНФ в программу на Java, C++, JavaSript, Go. Python и Go.
 
-ANTLR4 удобен для работы с AST, является свободным программным обеспечением, предоставляет сообщение об ошибках и восстановление после них, а так же предоставляет плагины для Eclipse и IntelliJ IDEA, что позволяет удобно создавать и отлаживать грамматики. Интерпретатор реализован на языке java.
+ANTLR4 удобен для работы с AST, является свободным программным обеспечением, предоставляет сообщение об ошибках и восстановление после них, а также предоставляет плагины для Eclipse и IntelliJ IDEA, что позволяет удобно создавать и отлаживать грамматики. Интерпретатор реализован на языке java.
 
 Описание грамматики в ANTLR4 состоит из правил, описываемых в файлах с расширением \textbf{.g4}. ANTLR4 позволяет описывать лексемы и синтаксические правила в одном файле грамматики. В этом случае в заголовке файла указывается ключевое слово grammar и название грамматики, которое должно совпадать с названием файла, в котором она описывается. Так же генератор позволяет разделять их на файлы, в котором описываются лексемы (заголовок lexer grammar) и синтаксические правила (parser grammar). Второй способ удобнее с точки зрения логического разделения описания лексем и правил. Далее файл, в котором описываются лексемы будем называть лексером, а файл, в котором описываются синтаксические правила парсером.
 
@@ -533,7 +533,7 @@ ANTLR4 удобен для работы с AST, является свободным программным обеспечением, пре
 \label{DescriptionOdDevelopedLang}
 \label{cImplementation}
 %Рекомендуемый объем главы --- 10-30 стр.
-%Название главы должно отражать ее содержание, например "Архитектура вечного двигателя''.
+%Название главы должно отражать ее содержание, например, "Архитектура вечного двигателя''.
 %В главе должно быть описание этапов разработки технического решения задачи. Следующий пример
 %приведен для работ, связанных с проектированием и реализацией
 %программного продукта.
@@ -553,13 +553,13 @@ ANTLR4 удобен для работы с AST, является свободным программным обеспечением, пре
 \itemПроверить полученное значение сигнала;
 \end{itemize}
 
-При этом команды, состоящие из аналитиков, тестировщиков и разработчиков должны сами определять набор инструкций, так как в процессе разработки автомобильного ПО могут выявляться свойства, специфичные для того или иного программного продукта. У пользователей должна быть возможность описать сценарии в свободной форме с иcпользованием проектно-специфичных терминов (например рычаги для тестирования ECU рулевой колонки, расстояние, видимость и уровень загрязнения сенсора для тестирования ECU лидара и т.д).
+При этом команды, состоящие из аналитиков, тестировщиков и разработчиков должны сами определять набор инструкций, так как в процессе разработки автомобильного ПО могут выявляться свойства, специфичные для того или иного программного продукта. У пользователей должна быть возможность описать сценарии в свободной форме с использованием проектно-специфичных терминов (например, рычаги для тестирования ECU рулевой колонки, расстояние, видимость и уровень загрязнения сенсора для тестирования ECU лидара и т.д.).
 Предполагается, что пользователи (заказчики, аналитики, менеджеры, разработчики и тестировщики) сами определяют ограниченный набор шагов, необходимых для описания тестовых сценариев в целом. Из пула обговоренных инструкций тестировщики составляют набор шагов для каждого тестового сценария, основываясь на предоставленных требованиях.
 
 
 Предположим, что синтаксис разрабатываемого языка будет иметь ключевые слова, по которым можно определить входные и выходные данные, возможность описывать сценарии на языке, привычном пользователю, будь то русский или английский.
 
-В качестве входов системы рассмотрим пакеты данных, отправляемые тестируемому оборудованию, а так же установку значений параметров (частота передачи данных, значения отправляемых сигналов и д.р.). В этом случае входы системы можно разделить на два класса: отправка данных и настройка данных. В таком случае выходами системы будут получаемые с тестируемого оборудования пакеты данных. Данные могут приниматься единожды (UDS пакеты), или же периодически (синхросигналы). Соответственно, представляется логичным разделить их на две большие группы: получение пакетов и данные, которые необходимо проверить в определенный момент времени. В этом случае система управления имеет входы $X(Send_{data}, Set_{data})$ и выходы $Y(Recieve_{data}, Check_{data})$.
+В качестве входов системы рассмотрим пакеты данных, отправляемые тестируемому оборудованию, а также установку значений параметров (частота передачи данных, значения отправляемых сигналов и др.). В этом случае входы системы можно разделить на два класса: отправка данных, и настройка данных. В таком случае выходами системы будут получаемые с тестируемого оборудования пакеты данных. Данные могут приниматься единожды (UDS пакеты), или же периодически (синхросигналы). Соответственно, представляется логичным разделить их на две большие группы: получение пакетов и данные, которые необходимо проверить в определенный момент времени. В этом случае система управления имеет входы $X(Send_{data}, Set_{data})$ и выходы $Y(Recieve_{data}, Check_{data})$.
 
 
 Из вышеуказанного можно определить следующий набор ключевых слов с которых должен начинаться любой шаг сценария: \textbf{Send}, \textbf{Set}, \textbf{Check}, \textbf{Receive}, \textbf{Pause}, \textbf{Repeat}. При этом ключевые слова должны начинаться с определенного начального символа, обозначающее начало служебного слова. При тестировании программного обеспечения ECU для автомобильных систем наименее вероятно использование символа коммерческое at(@), поэтому этот символ будет обозначать ключевые слова.
@@ -605,7 +605,7 @@ fragment S: [sS];
 \textbf{@Recieve} response 6E F1 01 00 01 A5,
 \textbf{@Set} ignition off.
 
-Такая запись не очень удобна с точки зрения восприимчивости теста. Поэтому разумно ввести правило, что каждое правило может начинаться с новой строки. При этом, чтобы улучшить читабельность тестового сценария должна быть возможность отделять некоторые шаги в логические блоки (например разделить шаги на блоки до выключения и после включения тестируемого оборудования). Для обозначения новой строки введем лексему \textbf{NewLine} (листинг \ref{lst:lnewLine}). Оператор $channel(HIDDEN)$ означает, что при синтаксическом анализе новые строки не учитываются. Подробнее правила синтаксического анализа будут рассмотрены в разделе \ref{lParser}.
+Такая запись не очень удобна с точки зрения восприимчивости теста. Поэтому разумно ввести правило, что каждое правило может начинаться с новой строки. При этом, чтобы улучшить читабельность тестового сценария должна быть возможность отделять некоторые шаги в логические блоки (например, разделить шаги на блоки до выключения и после включения тестируемого оборудования). Для обозначения новой строки введем лексему \textbf{NewLine} (листинг \ref{lst:lnewLine}). Оператор $channel(HIDDEN)$ означает, что при синтаксическом анализе новые строки не учитываются. Подробнее правила синтаксического анализа будут рассмотрены в разделе \ref{lParser}.
 
 \lstinputlisting[caption=Лексема новой строки, language=java, firstline=7, lastline=9 , label = {lst:lnewLine}]{res/BddLexer.g4}
 
@@ -630,7 +630,7 @@ fragment S: [sS];
 Шаги группируются в тестовые сценарии, которых в тестовой спецификации может быть несколько.
 
 После введения выше описанных лексем вид предполагается, что тестовый сценарий будет иметь следующий вид:
-\\\textbf{@TestCase} testing NVRAM functionallity of did 0xF101
+\\\textbf{@TestCase} testing NVRAM functionality of did 0xF101
 \\\textbf{@Set} ignition on,
 \\\textbf{@Send} request [22 F1 01 00 01 A5],
 \\\textbf{@Recieve} response [62 F1 01],
@@ -686,7 +686,7 @@ fragment S: [sS];
 \lstinputlisting[caption= синтаксическое правило для параметра, language=java, firstline=33, lastline=35, label={lst:lcustomParameter}]
 {res/BddParser.g4}
 
-Для случая, если неоходимо выполнить несколько раз одни и те же действия, реализовано правило \textbf{repeatPart}, начинающееся с лексемы \textbf{Repeat} (листинг \ref{lst:lRepeatRule}). После ключевого слова должно быть указано количесво повторений и набор шагов, которые необходимо выболнить несколько раз.
+Для случая, если неоходимо выполнить несколько раз одни и те же действия, реализовано правило \textbf{repeatPart}, начинающееся с лексемы \textbf{Repeat} (листинг \ref{lst:lRepeatRule}). После ключевого слова должно быть указано количесво повторений и набор шагов, которые необходимо выполнить несколько раз.
 
 \lstinputlisting[caption= синтаксическое правило repeatPart, language=java, firstline=25, lastline=27, label={lst:lRepeatRule}]
 {res/BddParser.g4}
@@ -738,6 +738,7 @@ BddParser.tokens, BddLexer.tokens — это вспомогательные классы, которые содержат
 \lstinputlisting[caption=реализация аннотации Check,language=java, firstline=1, lastline=6, label={lst:checkAnnotatoin}]{res/CheckAnnotation.txt}
 
 Для описания конечного набора инструкций, необходимых для описания тестовых сценариев введем класс CommandLib.java. Это библиотека пользовательских инструкций, в которой тестировщики должны описать методы, которые позволяют выполнять действия, необходимые для этих инструкций. Предположим, что для тестирования программного обеспечения для автомобильных систем одной из набора заранее обговоренных в команде фраз является фраза \emph{Send request [req]}. В этом случае необходимо реализовать метод с аннотацией Send, у которой метод text() возвращает текстовую инструкцию. В листинге \ref{lst:SendMethod} представлена реализация данной инструкции.
+\\ \\
 
 \lstinputlisting[caption=метод с аннотацией Send,language=java, firstline=8, lastline=12, label={lst:SendMethod}]{res/CheckAnnotation.txt}
 
@@ -775,13 +776,13 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 %\section{Архитектура системы}
 %Псевдокоды или блок-схемы основных алгоритмов, основные структуры данных и др.
 
-На рисунке \ref{ClassDiagram} представлена диаграмма классов интерпретатора.
+На рисунке \ref{fClassDiagram} представлена диаграмма классов интерпретатора.
 
-\begin{figure}[h!]
-\center{\includegraphics[width=\linewidth]{res/ClassDiagram}}
-\caption{Диаграмма классов}
-\label{fig:ClassDiagram}
-\end{figure}
+
+\begin{Figure}[h!]{Диаграмма классов}{fClassDiagram}
+{\includegraphics[width=\linewidth]{res/ClassDiagram}}
+\label{fig:image}
+\end{Figure}
 
 
 %------------------------Интерфейс системы
@@ -818,18 +819,18 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 \lstinputlisting[caption=Результат работы интерпретатора для тестового сценария с синтаксической ошибкой, language=java, firstline=13, lastline=14 , label={lst:ErrorExampleRes1}]{res/ErrorExample.txt}
 
 
-В случае, если на вход подается тестовая спецификация, в которой указана инструкция, не объявленная в пользовательской библиотеке команд (листинг \ref{lst:ErrorExample2}), возникает исключение UndefinedInstructionException, сообщающее какая именно инструкция была не определена (листинг \ref{lst:ErrorExampleRes2}).
+В случае, если на вход подается тестовая спецификация, в которой указана инструкция, не объявленная в пользовательской библиотеке команд (листинг \ref{lst:ErrorExampleInput2}), возникает исключение UndefinedInstructionException, сообщающее какая именно инструкция была не определена (листинг \ref{lst:ErrorExampleRes2}).
 
 \lstinputlisting[caption=Пример тестового сценария c необъявленной инструкцией, language=java, firstline=18, lastline=20, , label={lst:ErrorExampleInput2} ]{res/ErrorExample.txt}
 
 
-\lstinputlisting[caption=Результат работы интерпретатора для тестового сценария с необъявленной инструкцией, language=java, firstline=22, lastline=23, label={lst:ErrorExampleRes2}]{res/ErrorExample.txt}
+\lstinputlisting[caption=Результат работы интерпретатора для тестового сценария с необъявленной инструкцией, language=java, firstline=22, lastline=24, label={lst:ErrorExampleRes2}]{res/ErrorExample.txt}
 
 
 
 %TODO: add more info about defferent exceptions
 
-\chapter{Тестирование и опробация}
+\chapter{Тестирование и апробация}
 \label{cExperiments}
 %Рекомендуемый объем главы --- 5--20 стр.
 %Название главы должно отражать ее содержание, например "Оценка эффективности вечного двигателя''.
@@ -904,17 +905,19 @@ InstructionIsNotDeclared&Instruction 'request [] in functional addressing mode' 
 
 По мнению 100\% респондентов, спецификации, описанные на разработанном языке, достаточно понятны. При этом 13 из 18 опрошенных по возможности описывали бы тестовые сценарии на данном языке. 
 
-\section{Опробация}
+\section{Апробация}
 
 В качестве примера применения разработанного языка используем пример тестового сценария для проверки функционала записи данных в энергонезависимую память, рассматриваемого в разделе \ref{lexer}. В качестве тестируемого оборудования использовался лидар. Тестовая спецификация представлена в листинге \ref{lst:FinalTestCaseExample}).
 
-\lstinputlisting[caption=Тестовая спецификация, language=java, firstline=1, lastline=10, , label={lst:FinalTestCaseExample} ]{res/FinalTestCaseExample.txt}
 
-Для данной тестовой спецификации необходимо в классе CommandLib.java определить методы, отвечающие за включение (ignitionOn) и выключение (ignitionOff) тестируемого железа, а так же отправление (sendRequest) и получение (recieveResponce) данных. Примеры реализации методом для отправки и получения данных по протоколу FlexRay представлены в листинге \ref{lst:finalTestCasLib}. 
+Для данной тестовой спецификации необходимо в классе CommandLib.java определить методы, отвечающие за включение (ignitionOn) и выключение (ignitionOff) тестируемого железа, а так же отправление (sendRequest) и получение (recieveResponce) данных. Примеры реализации методом для отправки и получения данных по протоколу FlexRay представлены в листинге \ref{lst:finalTestCasLib}. \\ \\ 
+
+\lstinputlisting[caption=Тестовая спецификация, language=java, firstline=1, lastline=15, , label={lst:FinalTestCaseExample} ]{res/FinalTestCaseExample.txt}
+
 
 \lstinputlisting[caption=Реализация пользовательской библиотеки, language=java, firstline=23, lastline=31, label={lst:finalTestCasLib} ]{res/CommandLib.java}
 
-Результаты теста записанные в файл result.txt представлены в листинге \ref{lst:FinalTestResult}. Из данного файла видно, что ожидаемый ответ от тестируемого оборудования о том, что данные успешно записаны (62 F1 01) был получен. Однако после перезапуска тестируемого оборудования ожидаемый ответ (62 F1 01 00 01 A5) на запрос о прочтении данных не был получен. Вместо этого тестируемое оборудование отправило ответ (7F 22 31), означающий, что данный сервис не поддерживается в текущей сессии \cite {stUds}. 
+Результаты теста записанные в файл result.txt представлены в листинге \ref{lst:FinalTestResult}. Из данного файла видно, что ожидаемый ответ от тестируемого оборудования о том, что данные успешно записаны (62 F1 01) был получен. Однако после перезапуска тестируемого оборудования ожидаемый ответ (62 F1 01 00 01 A5) на запрос о прочтении данных не был получен. Вместо этого тестируемое оборудование отправило ответ (7F 22 31), означающий, что данный сервис не поддерживается в текущей сессии \cite {stUds}. \\\\
 
 \lstinputlisting[caption=Реализация пользовательской библиотеки, language=java, label={lst:FinalTestResult} ]{res/result.txt}
 
@@ -929,9 +932,9 @@ InstructionIsNotDeclared&Instruction 'request [] in functional addressing mode' 
 В результате проведенной работы был разработан и реализован язык описания сценариев для тестирование программного обеспечения автомобильных систем. 
 
 
-Данный язык пзволяет пользователям описывать инструкции для тестовых сценариев в свободной форме. Для этого была реализована возможность пользователям задавать тестовые инструкции в специальной пользовательской бибилиотеке. В одном документе можно описать несколько тестовых сценариев. Тестовая спецификация должна содержать не менее одного сценария тестирования. 
+Данный язык позволяет пользователям описывать инструкции для тестовых сценариев в свободной форме. Для этого была реализована возможность пользователям задавать тестовые инструкции в специальной пользовательской библиотеке. В одном документе можно описать несколько тестовых сценариев. Тестовая спецификация должна содержать не менее одного сценария тестирования. 
 
-Для реализации языка был разработан интерпретатор. Указаные в тестовой документации сценарии интерпретатор выполняет поочередно в той последовательности, в которой они были указаны в тестовой спецификации. Так же была реализована возможность работы с автомобильными шинами CAN и FLexFray. Данные, полученные в результате выполнения теста сохраняются в отдельный файл. 
+Для реализации языка был разработан интерпретатор. Указанные в тестовой документации сценарии интерпретатор выполняет поочередно в той последовательности, в которой они были указаны в тестовой спецификации. Так же была реализована возможность работы с автомобильными шинами CAN и FlexRay. Данные, полученные в результате выполнения теста сохраняются в отдельный файл. 
 
 Так же было выполнено модульное тестирование интерпретатора, позволившее проверить степень качества разработанного продукта.
 
@@ -944,3 +947,4 @@ InstructionIsNotDeclared&Instruction 'request [] in functional addressing mode' 
 
 
 \end{document}
+
