--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,4 @@
-
+@PREAMBLE{ {\providecommand{\noopsort}[1]{}} }:
 @book{stUds,
   title = {Road vehicles Ч Unified diagnostic services (UDS) ЧPart 1:Specification and requirements},
   type = {"ISO"},
@@ -20,7 +20,7 @@
 @book{Eshby1959,
 	author="{Ёшби, ”.–.}",
 	title="¬ведение в кибернетику",
-	publisher="–ипол  лассик",
+	publisher="»здательство иностранной литературы",
 	year="1959",
 	numpages="432",
 	language="russian"
@@ -38,9 +38,10 @@
 
 @article{wwwXLDriverLib,
 	key = "INTERNET",
-	title    = {XL-Driver-Library},
-	url  = "\url{https://www.vector.com/int/en/products/products-a-z/libraries-drivers/xl-driver-library/}",
-	author = "{Vector Informatik GmbH}",
+	title    = {XL-Driver-Library [{Ё}лектронный ресурс]},
+	url  = "--- –ежим доступа: 
+	\url{https://www.vector.com/int/en/products/products-a-z/libraries-drivers/xl-driver-library/}, свободный.",
+	author = "\noopsort{INTERNET}Vector Informatik GmbH",
 	year = {2019},
 	language={english}
 }
@@ -54,9 +55,11 @@
 }
 
 @article{CCLD,
-	title    = {CCDL: The Composable Components Description Language},
+	key = "INTERNET",
+	title    = {CCDL: The Composable Components Description Language  [{Ё}лектронный ресурс]},
 	journal = {"International Journal on Software Tools for Technology Transfer"},
-	url  = {https://link.springer.com/article/10.1007/s10009-006-0017-7},
+	url  = "---–ежим доступа: 
+		\url{https://link.springer.com/article/10.1007/s10009-006-0017-7}, свободный.",
 	author = {Sora I., Verbaeten P., Berbers Y.},
 	year = {2006}, 
 	publisher ={Springer-Verlag},
