--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 
 \usepackage{amsfonts}
 
-\bachelor{Разработка и реализация языка описания сценариев тестирования автомобильных систем}{02.03.02<<Информатика и вычислительная техника>>}{02.03.02\_02<<Распределенные информационные системы>>}{43504/6}{А. А. Спасеева}{к.т.н., доцент}{ А. В. Самочадин}
+\bachelor{Разработка и реализация языка описания сценариев тестирования автомобильных систем}{02.03.02<<Фундаментальная информатика и информационные технологии>>}{02.03.02\_02<<Информатика и компьютерные науки>>}{43504/6}{А. А. Спасеева}{к.т.н., доцент}{ А. В. Самочадин}
 
 
 
