--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@ Furthermore, this paper aims to describe the development of the programming lang
 
 The final result of this work is a fully functional language used for describing automobile testing scenarios. Also, this language could potentially be integrated into the corporate environment.
 
-Keywords: domain specific language, functional testing, automobile systems.
+Keywords: domain specific language, functional testing, automotive systems.
 }
 
 
